--- a/tests/unit/data/lib/generators/my_controller/.generator.yml
+++ b/tests/unit/data/lib/generators/my_controller/.generator.yml
@@ -1,9 +1,9 @@
 # Changes here will be overwritten by Copier
-_commit: d24bc7d
+_commit: ec8a823
 _src_path: https://github.com/fastapi-mvc/copier-generator.git
 copyright_date: 2022
-generator: foobar
-generator_name: foobar
+generator: my_controller
+generator_name: my_controller
 license: MIT
 nix: true
 repo_url: https://your.repo.url.here
