--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - master
 
+env:
+  NIX_CHANNEL: nixpkgs=channel:nixos-22.05
+
 jobs:
   # This job checks if an identical workflow is being triggered by different
   # event and skips it. For instance there is no need to run the same pipeline
@@ -46,7 +49,7 @@ jobs:
         uses: cachix/install-nix-action@v17
         with:
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
-          nix_path: nixpkgs=channel:nixos-22.05
+          nix_path: ${{ env.NIX_CHANNEL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v10
         with:
@@ -74,7 +77,7 @@ jobs:
       - name: Install Nix ❄️
         uses: cachix/install-nix-action@v17
         with:
-          nix_path: nixpkgs=channel:nixos-22.05
+          nix_path: ${{ env.NIX_CHANNEL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v10
         with:
