--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,9 @@ name: CI
 on: [push, pull_request]
 
 env:
-  POETRY_HOME: /opt/poetry
-  POETRY_CONFIG_DIR: /opt/poetry
-  POETRY_VIRTUALENVS_PATH: /opt/poetry/store
+  POETRY_HOME: /tmp/poetry
+  POETRY_CONFIG_DIR: /tmp/poetry
+  POETRY_VIRTUALENVS_PATH: /tmp/poetry/store
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
@@ -25,10 +25,11 @@ jobs:
   install:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ '3.8', '3.9', '3.10' ]
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -92,11 +93,12 @@ jobs:
           files: ./coverage.xml
   metrics:
     needs: install
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: [ '3.8', '3.9', '3.10' ]
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -113,11 +115,12 @@ jobs:
         run: make metrics
   unit-tests:
     needs: install
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: [ '3.8', '3.9', '3.10' ]
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -134,11 +137,12 @@ jobs:
         run: make unit-test
   integration-tests:
     needs: install
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: [ '3.8', '3.9', '3.10' ]
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
