--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -41,7 +41,11 @@ jobs:
   nix-build:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
@@ -64,11 +68,12 @@ jobs:
   nix-ci:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: [ 'python38', 'python39', 'python310' ]
+        os: [ubuntu-latest, macos-12]
+    runs-on: ${{ matrix.os }}
     env:
       PYTHON_NIXPKG: ${{ matrix.python-version }}
 
