--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,22 +7,21 @@ on:
         description: "Commit SHA"
         required: true
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-  publish:
+  publish-pypi:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Configure env
-        run: |
-          echo "pkg_build=fastapi_mvc-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
-          echo "docs_build=docs-${{ github.event.inputs.sha }}" >> $GITHUB_ENV
       - name: Download build artifact
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: main.yml
           workflow_conclusion: success
-          name: ${{ env.pkg_build }}
+          name: ${{ format('fastapi_mvc-{0}', github.event.inputs.sha) }}
           commit: ${{ github.event.inputs.sha }}
           path: dist
       - name: Publish package to PyPI
@@ -30,12 +29,16 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
+  publish-docs:
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Download docs artifact
         uses: dawidd6/action-download-artifact@v2
         with:
           workflow: docs.yml
           workflow_conclusion: success
-          name: ${{ env.docs_build }}
+          name: ${{ format('docs-{0}', github.event.inputs.sha) }}
           commit: ${{ github.event.inputs.sha }}
           path: site
       - name: Publish docs to Netlify
@@ -49,3 +52,33 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+  publish-image:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download image artifact
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          workflow: image.yml
+          workflow_conclusion: success
+          name: ${{ format('nix-image-{0}', github.event.inputs.sha) }}
+          commit: ${{ github.event.inputs.sha }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Load and push image
+        run: |
+          docker load --input result
+          docker tag fastapi-mvc:latest ${{ format('{0}/{1}:latest', env.REGISTRY, env.IMAGE_NAME) }}
+          docker push ${{ format('{0}/{1}:latest', env.REGISTRY, env.IMAGE_NAME) }}
+          echo "IMAGE_TAG=$(cat TAG)" >> $GITHUB_ENV
+          docker tag fastapi-mvc:latest ${{ format('{0}/{1}:{2}', env.REGISTRY, env.IMAGE_NAME, env.IMAGE_TAG) }}
+          docker push ${{ format('{0}/{1}:{2}', env.REGISTRY, env.IMAGE_NAME, env.IMAGE_TAG) }}
