--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -69,7 +69,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 'python38', 'python39', 'python310' ]
+        python-version: [ 'python38', 'python39', 'python310', 'python311' ]
         os: [ubuntu-latest, macos-12]
     runs-on: ${{ matrix.os }}
     env:
