--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
     "License :: OSI Approved :: MIT License",
     "Topic :: Software Development",
     "Topic :: Software Development :: Code Generators",
