--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -44,7 +44,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ '.#py38', '.#py39', '.#py310' ]
+        python-version: [ '38', '39', '310' ]
         os: [ubuntu-latest, macos-12]
     runs-on: ${{ matrix.os }}
 
@@ -61,7 +61,7 @@ jobs:
           name: fastapi-mvc
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Build fastapi-mvc
-        run: nix build ${{ matrix.python-version }}
+        run: nix build .#fastapi-mvc-py${{ matrix.python-version }}
   nix-ci:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
@@ -82,9 +82,9 @@ jobs:
         with:
           name: fastapi-mvc
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+      - name: Run fake check
+        run: nix flake check
       - name: Run fastapi-mvc metrics checks
         run: nix run .#metrics
       - name: Run fastapi-mvc tests
         run: nix run .#test
-      - name: Run fastapi-mvc coverage
-        run: nix run .#coverage
