--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -44,7 +44,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ '38', '39', '310' ]
+        python-version: [ '38', '39', '310', '311' ]
         os: [ubuntu-latest, macos-12]
     runs-on: ${{ matrix.os }}
 
