--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -9,7 +9,7 @@ on:
       - master
 
 env:
-  NIX_CHANNEL: nixpkgs=channel:nixos-22.05
+  NIX_CHANNEL: nixpkgs=channel:nixos-22.11
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
@@ -26,7 +26,7 @@ jobs:
           skip_after_successful_duplicate: 'true'
           concurrent_skipping: same_content
           do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
-  nixpkgs-fmt:
+  nix-checks:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
     runs-on: ubuntu-latest
@@ -35,9 +35,20 @@ jobs:
       - uses: cachix/install-nix-action@v18
         with:
           nix_path: ${{ env.NIX_CHANNEL }}
+      - name: Setup Cachix ❄️
+        uses: cachix/cachix-action@v12
+        with:
+          name: fastapi-mvc
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - uses: actions/checkout@v3
       - name: Check format
         run: nix-shell -p nixpkgs-fmt --run 'nixpkgs-fmt --check .'
+      - name: Run nix flake check
+        run: nix flake check
+      - name: Run fastapi-mvc metrics checks
+        run: nix run .#metrics
+      - name: Run fastapi-mvc tests
+        run: nix run .#test
   nix-build:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
@@ -62,29 +73,3 @@ jobs:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - name: Build fastapi-mvc
         run: nix build .#fastapi-mvc-py${{ matrix.python-version }}
-  nix-ci:
-    needs: pre_job
-    if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-12]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install Nix ❄️
-        uses: cachix/install-nix-action@v18
-        with:
-          nix_path: ${{ env.NIX_CHANNEL }}
-      - name: Setup Cachix ❄️
-        uses: cachix/cachix-action@v12
-        with:
-          name: fastapi-mvc
-          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: Run fake check
-        run: nix flake check
-      - name: Run fastapi-mvc metrics checks
-        run: nix run .#metrics
-      - name: Run fastapi-mvc tests
-        run: nix run .#test
