--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,13 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
+    reviewers:
+      - "fastapi-mvc/triage"
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
-      interval: "monthly"
+      interval: "weekly"
     reviewers:
       - "fastapi-mvc/triage"
+    open-pull-requests-limit: 3
