--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -147,6 +147,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Set up GNU coreutils on macos runner
+        if: matrix.os == 'macos-12'
+        run: |
+          brew install coreutils
+          echo "/usr/local/opt/coreutils/libexec/gnubin" >> $GITHUB_PATH
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
