--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ black = "~22.12.0"
 Sphinx = "~5.3.0"
 Pallets-Sphinx-Themes = "~2.0.3"
 myst-parser = "~0.18.1"
+sphinx-click = "~4.4.0"
 
 [tool.poetry.scripts]
 fastapi-mvc = "fastapi_mvc.cli.cli:cli"
