--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,3 +54,8 @@ fm = "fastapi_mvc.cli.cli:cli"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.coverage.run]
+omit = [
+    "fastapi_mvc/__main__.py",
+]
