--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,10 @@ python = "^3.8"
 click = "~8.1.3"
 copier = "6.2.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
 pytest = "~7.2.0"
 pytest-cov = "~4.0.0"
 flake8 = "~5.0.4"
@@ -39,6 +42,12 @@ flake8-docstrings = "~1.7.0"
 flake8-import-order = "~0.18.2"
 flake8-todo = "^0.7"
 black = "~23.1.0"
+mypy = "~1.0.1"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
 Sphinx = "~5.3.0"
 Pallets-Sphinx-Themes = "~2.0.3"
 myst-parser = "~0.18.1"
@@ -59,3 +68,28 @@ build-backend = "poetry.core.masonry.api"
 omit = [
     "fastapi_mvc/__main__.py",
 ]
+
+[tool.mypy]
+# temporarily ignore some files
+python_version = '3.10'
+show_error_codes = true
+follow_imports = 'silent'
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+disallow_any_generics = true
+check_untyped_defs = true
+no_implicit_reexport = true
+warn_unused_configs = true
+disallow_subclassing_any = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+implicit_optional = true
+
+[[tool.mypy.overrides]]
+module = [
+    "copier.*"
+]
+ignore_missing_imports = true
