Pin nix version in nix-install-action

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -10,6 +10,7 @@ on:
 
 env:
   NIX_CHANNEL: nixpkgs=channel:nixos-22.11
+  NIX_INSTALL_URL: https://releases.nixos.org/nix/nix-2.13.3/install
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
@@ -35,6 +36,7 @@ jobs:
       - uses: cachix/install-nix-action@v19
         with:
           nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v12
         with:
@@ -68,6 +70,7 @@ jobs:
         with:
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
           nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v12
         with:
