--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   NIX_CHANNEL: nixpkgs=channel:nixos-22.05
+  NIX_INSTALL_URL: https://releases.nixos.org/nix/nix-2.13.3/install
 
 jobs:
   # This job checks if an identical workflow is being triggered by different
@@ -49,6 +50,7 @@ jobs:
         with:
           extra_nix_config: "system-features = nixos-test benchmark big-parallel kvm"
           nix_path: ${{ env.NIX_CHANNEL }}
+          install_url: ${{ env.NIX_INSTALL_URL }}
       - name: Setup Cachix ❄️
         uses: cachix/cachix-action@v12
         with:
