--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -26,17 +26,17 @@ jobs:
   install:
     needs: pre_job
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Set up Python 3.9
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: 3.9
       - name: Init Poetry cache
         id: cached-poetry
-        uses: actions/cache@v3
+        uses: actions/cache@v5
         with:
           path: ${{ env.POETRY_HOME }}
           key: ${{ runner.os }}-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
@@ -45,16 +45,16 @@ jobs:
         if: steps.cached-poetry.outputs.cache-hit != 'true'
   test-redis-ha:
     needs: install
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Set up Python 3.9
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: 3.9
       - name: Load Poetry cache
-        uses: actions/cache@v3
+        uses: actions/cache@v5
         with:
           path: ${{ env.POETRY_HOME }}
           key: ${{ runner.os }}-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
@@ -84,16 +84,16 @@ jobs:
   test-minimal:
     needs: install
     if: ${{ needs.pre_job.outputs.should_skip != 'true' }}
-    runs-on: macos-12
+    runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - name: Set up Python 3.9
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v6
         with:
           python-version: 3.9
       - name: Load Poetry cache
-        uses: actions/cache@v3
+        uses: actions/cache@v5
         with:
           path: ${{ env.POETRY_HOME }}
           key: ${{ runner.os }}-3.9-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/poetry.lock') }}
