--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,27 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[project]
 name = "fastapi-mvc"
 version = "0.28.1"
 description = "Developer productivity tool for making high-quality FastAPI production-ready APIs."
-authors = ["Radosław Szamszur <github@rsd.sh>"]
+authors = [
+   { name = "Radosław Szamszur", email = "github@rsd.sh" },
+]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/fastapi-mvc/fastapi-mvc"
-documentation = "https://fastapi-mvc.netlify.app"
+documentation = "https://fastapi-mvc.github.io/fastapi-mvc/"
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
     "Topic :: Software Development",
     "Topic :: Software Development :: Code Generators",
@@ -25,36 +30,46 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Framework :: FastAPI",
 ]
+requires-python = ">=3.10"
+dependencies = [
+  "click ==8.2.1",
+  "copier ==6.2.0",
+  # Force transient dependencies (from copier) to behave
+  "pydantic >=1.2.0, <2",
+  "pyyaml-include >=1.2, <2",
+]
 
-[tool.poetry.dependencies]
-python = "^3.8"
-click = "~8.1.3"
-copier = "6.2.0"
+[project.optional-dependencies]
+test = [
+  "pytest >=7.2, <7.5",
+  "pytest-cov >=4.0, <4.2",
+  "flake8 ~=5.0.4",
+  "flake8-docstrings ~=1.7.0",
+  "flake8-import-order ~=0.18.2",
+  "flake8-todo ~=0.7",
+  "black >=23.1, <23.4",
+  "mypy >=1.0.1, <1.5.0",
+]
+docs = [
+  "Sphinx >=5.3, <6.3",
+  "Pallets-Sphinx-Themes >=2.0.3, <2.2.0",
+  "myst-parser >=0.18.1, <1.1.0",
+  "sphinx-click ~=4.4.0",
+]
 
-[tool.poetry.group.dev.dependencies]
-pytest = ">=7.2,<7.5"
-pytest-cov = ">=4.0,<4.2"
-flake8 = "~5.0.4"
-flake8-docstrings = "~1.7.0"
-flake8-import-order = "~0.18.2"
-flake8-todo = "^0.7"
-black = ">=23.1,<23.4"
-mypy = ">=1.0.1,<1.5.0"
-Sphinx = ">=5.3,<6.3"
-Pallets-Sphinx-Themes = ">=2.0.3,<2.2.0"
-myst-parser = ">=0.18.1,<1.1.0"
-sphinx-click = "~4.4.0"
-
-[tool.poetry.scripts]
+[project.scripts]
 fastapi-mvc = "fastapi_mvc.cli.cli:cli"
 fm = "fastapi_mvc.cli.cli:cli"
 
-[tool.poetry.urls]
+[project.urls]
 "Issues" = "https://github.com/fastapi-mvc/fastapi-mvc/issues"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.uv]
+package = true
+
+[tool.uv.build-backend]
+module-name = "fastapi_mvc"
+module-root = ""
 
 [tool.coverage.run]
 omit = [
