--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,22 +33,19 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
   "click ==8.2.1",
-  "copier ==6.2.0",
-  # Force transient dependencies (from copier) to behave
-  "pydantic >=1.2.0, <2",
-  "pyyaml-include >=1.2, <2",
+  "copier >=9.11.3, <10",
 ]
 
 [project.optional-dependencies]
 test = [
-  "pytest >=7.2, <7.5",
-  "pytest-cov >=4.0, <4.2",
-  "flake8 ~=5.0.4",
-  "flake8-docstrings ~=1.7.0",
-  "flake8-import-order ~=0.18.2",
-  "flake8-todo ~=0.7",
-  "black >=23.1, <23.4",
-  "mypy >=1.0.1, <1.5.0",
+  "pytest >=9.0.2, <10",
+  "pytest-cov >=7.0.0, <8",
+  "flake8 >=7.3.0, <8",
+  "flake8-docstrings >=1.7.0, <2",
+  "flake8-import-order >=0.19.2, <2",
+  "flake8-todo >=0.7, <1",
+  "black >=26.1.0, <27",
+  "mypy >=1.19.1, <2",
 ]
 docs = [
   "Sphinx >=5.3, <6.3",
