chore(treefmt): excludes test generators

--- a/treefmt.toml
+++ b/treefmt.toml
@@ -1,6 +1,7 @@
 [formatter.nix]
 command = "nixfmt"
 includes = ["*.nix"]
+excludes = ["tests/unit/custom_generators/**/*.nix"]
 
 [formatter.deadnix]
 command = "deadnix"
